#28792 Apply 'text overflow truncation' style to widgets to prevent broken it by long text
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@44311 fb2e276d-fae9-0310-b578-b71ac85840b9

--- a/portal/src/main/static/src/_dashboard.scss
+++ b/portal/src/main/static/src/_dashboard.scss
@@ -423,4 +423,45 @@
     border-right-width: 2px;
 }
 
+.back-to-dashboard span.hint {
+    font-size: 16px;
+    color: #F7AC00;
+    margin-top: 2px;
+}
+
+.dashboard-card .text-overflow {
+  	display: -webkit-box;
+  	-webkit-box-orient: vertical;
+  	overflow: hidden;
+    text-overflow: ellipsis;
+    
+    &.next-session {
+		-webkit-line-clamp: 4;
+		height: 110px;
+    }
+    &.sing-line {
+  		-webkit-line-clamp: 1;
+    }
+    
+   	&.feedback {
+       -webkit-line-clamp: 2;
+       height: 120px;
+    }
+    
+    &.approval {
+        -webkit-line-clamp: 2;
+        height: 45px;
+    }
+    
+    &.mark-roll, &.mark-outcomes {
+		-webkit-line-clamp: 3;
+		height: 70px;
+    }
+    
+    &.application {
+        -webkit-line-clamp: 4;
+        height: 100px;
+    }
+}
+  
 
